--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /*!
 Styles for full screen background video demo
 */
-/* =============================================================================
+/* ===============================
   RESETS
-============================================================================= */
+==================================*/
 html,
 body,
 div,
@@ -11,71 +11,141 @@ h1,
 p,
 a,
 video {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
-/* =============================================================================
+/* ===============================
   HTML, BODY
-============================================================================= */
+==================================*/
 html,
-body {
-  height: 100%;
+body{
+    height: 100%;
 }
 
 body {
-  font-size: 16px;
-  font-family: "Oxygen", sans-serif;
-  line-height: 1.5;
+    font-size: 16px;
+    font-family: "Oxygen", sans-serif;
+    line-height: 1.5;
 }
 
-/* =============================================================================
+/* ===============================
+  HEADER
+==================================*/
+
+header {
+    z-index: 2;
+}
+
+/* ===============================
   CONTENT
-============================================================================= */
+==================================*/
 .content {
-  position: relative;
-  top: 30%;
-  z-index: 2;
-  margin: 0 auto;
-  max-width: 720px;
-  text-align: center;
+    position: relative;
+    top: 80%;
+    z-index: 2;
+    margin: 0 auto;
+    max-width: 90%;
+    text-align: center;
+    opacity: 0.8;
 }
 
 .content__heading {
-  margin-bottom: 24px;
-  color: #272727;
-  font-size: 44px;
+    margin-bottom: 20px;
+    padding-top: 50px;
+    color: #272727;
+    font-size: 44px;
 }
 
 .content__teaser {
-  margin-bottom: 24px;
-  color: #595959;
-  font-size: 22px;
+    margin-bottom: 24px;
+    color: #272727;
+    font-size: 22px;
 }
 
 .content__cta {
-  display: inline-block;
-  margin: 0;
-  padding: 12px 48px;
-  color: #ff3c64;
-  font-size: 22px;
-  text-decoration: none;
-  border: solid 4px #ff3c64;
+    display: inline-block;
+    margin: 0;
+    padding: 12px 48px;
+    color: #ff3c64;
+    font-size: 22px;
+    text-decoration: none;
+    border: solid 4px #ff3c64;
+    margin-bottom: 24px;
 }
 
-/* =============================================================================
+
+/*
+    background-color: #F2F2F2;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
+    border: 1px none;
+    border-radius: 6px;
+*/
+.transbox{
+    
+    background-color: #F5F5F5;
+    padding-top: 20px;
+    padding-bottom: 200px;
+    margin-bottom: 100%;
+}
+
+.transbox_footer{
+    background-color: #F5F5F5;
+    padding-top: 20px;
+}
+
+/* ===============================
   VIDEO
-============================================================================= */
+==================================*/
 .video {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  z-index: 1;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  -webkit-transform: translate(-50%, -50%);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+/* ===============================
+  FOOTER
+==================================*/
+
+/*footer {
+    z-index: 2;
+    background-color: #F5F5F5;
+    position: inherit;
+    height: 100px;
+    bottom: 0;
+    width: 100%;
+}*/
+
+footer {
+    z-index: 2;
+    position: relative;
+	width: 100%;
+	padding: 30px 0%;
+	background: rgb(70,70,70);
+	overflow: auto;
+}
+
+footer div{
+	width: 80%; 
+	margin: 0 auto;
+	min-width: 800px;
+}
+
+footer img {
+	margin-right: 50px;
+	float: left;
+}
+
+footer p {
+	float: left;
+	padding-top: 12px;
 }
